tests/errors/lex_comment.java
public class lex_comment {
	public static void main(String[] args) {
		/*
		 * This is
		 * a multi-line
		 * comment
	}
}
